--- a/src/main/resources/templates/admin/member.html
+++ b/src/main/resources/templates/admin/member.html
@@ -71,10 +71,10 @@
                     <div>
                         <span>총<th:block th:text="${adminPagination.total} +'명'">
                         </th:block></span>
-                        <button type="button" onclick="deleteUser()" class="btn11 deleteBtn">삭제</button>
+                        <button onclick="deleteUser()" class="btn11 deleteBtn">삭제</button>
                     </div>
                 </div>
-                        <button type="button" onclick="getUserList()" class="rightbtn deleteBtn">새로고침</button>
+                        <button type="button" onclick="" class="rightbtn deleteBtn">새로고침</button>
                 <form th:action="@{member}" class = "userForm">
                     <table class="userTable">
                         <thead>
@@ -99,19 +99,19 @@
                 <!-- [S] 페이지 컨트롤러 -->
                 <div class="page-controller-wrap">
                     <!-- 이전 버튼 -->
-                    <a th:if="${adminPagination.prev}" th:href="@{member(page =${adminPagination.startPage -1})}"
+                    <a th:if="${adminPagination.prev}" th:href="${adminPagination.startPage -1}"
                        class="change-page page-list page-list-move page-before">
                         <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAHCAQAAABqrk9lAAAAGElEQVR42mNgAIPi/8X/4QwwE5PBQJADAAKSG3cyVhtXAAAAAElFTkSuQmCC"
                              alt="이전 페이지로 이동하기 아이콘">
                     </a>
                     <th:block th:each="page:${#numbers.sequence(adminPagination.startPage, adminPagination.endPage)}">
-                        <a th:if="${page eq adminPagination.page}" th:href="@{member(page=${page})}" class="page-list list-first"
+                        <a th:if="${page eq adminPagination.page}"  class="page-list list-first"
                            th:text="${page}"></a>
-                        <a th:unless="${page eq adminPagination.page}" th:href="@{member(page=${page})}"
+                        <a th:unless="${page eq adminPagination.page}" th:href="${page}"
                            class="change-page page-list page-list-first list-on" th:text="${page}"></a>
                     </th:block>
                     <!-- 다음 페이지로 이동하기 -->
-                    <a th:if="${adminPagination.next}" th:href="@{member(page =${adminPagination.endPage +1})}"
+                    <a th:if="${adminPagination.next}" th:href="${adminPagination.endPage + 1}"
                        class="change-page page-list page-list-move page-after">
                         <img src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAUAAAAHCAQAAABqrk9lAAAAGUlEQVR42mMo/l/8nwECQEwCHEwGhAlRBgA2mht3SwgzrwAAAABJRU5ErkJggg=="
                              alt="다음 페이지로 이동하기 아이콘">
@@ -132,17 +132,17 @@
 <script th:inline="javascript">
     let users = [[${members}]];
     console.log(users);
-    let page = [[${adminPagination.page}]];
-
     let adminPagination = [[${adminPagination}]];
     console.log(adminPagination);
-    console.log(page);
+
 
 
 </script>
-<script src="/js/admin/userpaging.js"></script>
-<script src="/js/admin/member.js"></script>
+<!--<script src="/js/admin/userpaging.js"></script>-->
+
+<script src="/js/admin/userjs.js"></script>
 </html>
+
 
 
 
