--- a/src/main/resources/templates/admin/product-form.html
+++ b/src/main/resources/templates/admin/product-form.html
@@ -49,7 +49,7 @@
             <div class="content-wrap">
 
                 <!-- [S] 공지사항 등록 -->
-                <form th:action="@{product-form}" th:object="${productVO}" method="post" class="submit-form">
+                <form th:action="@{product-form}" th:object="${productVO}" method="post" class="submit-form" enctype="multipart/form-data">
                     <div class="con-write-wrap">
                         <div class="notice-write">
                             <div class="write-title">상품명</div>
@@ -117,10 +117,10 @@
                                         <div class="cancel">X</div>
                                     </div>
                                 </div>
-                                <label for="attach">
+                                <label for="uploadFile">
                                     <div class="search-notice-img">찾아보기</div>
                                 </label>
-                                <input type="file" class="file" id="attach" style="display: none;" name= "upload" >
+                                <input type="file" class="file" id="uploadFile" style="display: none;" name= "uploadFile" >
                             </div>
                         </div>
                     </div>
