--- a/src/main/resources/templates/notice/notice.html
+++ b/src/main/resources/templates/notice/notice.html
@@ -214,9 +214,10 @@
 </div>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-<script th:inline="javascript">
-    let notices = [[${notices}]];
-</script>
+<!--<script th:inline="javascript">-->
+<!--    let notices = [[${notices}]];-->
+<!--    console.log(notices);-->
+<!--</script>-->
 <script src="/js/admin/notice-detail.js"></script>
 <!--<script src="/js/header-footer/header.js"></script>-->
 
