--- a/src/main/resources/templates/review/user_review_list.html
+++ b/src/main/resources/templates/review/user_review_list.html
@@ -6,17 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>플로깅 참가자 후기 목록</title>
     <style>
-        button.button:hover{
+        button.button:hover {
             color: #FFFFFF;
             border: 2px solid #FFFFFF;
             background-color: #3B7661;
         }
-        button.mainBtn:hover{
+
+        button.mainBtn:hover {
             color: #FFFFFF;
             border: 2px solid #FFFFFF;
             background-color: #3B7661;
         }
-        button.orderActive{
+
+        button.orderActive {
             color: #FFFFFF;
             border: 2px solid #FFFFFF;
             background-color: #7aab9a;
@@ -29,20 +31,24 @@
 <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 <link href="/css/font.css" rel="stylesheet"/>
 <link rel="stylesheet" href="/css/header-footer/header.css">
-<link rel="stylesheet" href="/css/header-footer/footer.css">
+<link rel="stylesheet" href="/css/header-footer/header-login.css">
 
 <body>
-<th:block th:replace="/header-footer/header::header"></th:block>
+<th:block th:if="${session.userId==null}">
+    <header class="header" th:replace="~{/header-footer/header :: header}"></header>
+</th:block>
+<th:block th:unless="${session.userId==null}">
+    <header class="header" th:replace="~{/header-footer/header-login :: header}"></header>
+</th:block>
 <div class="css-b3oum6">
     <div class="layout">
         <div class="e18r2nwe4 css-12un3nt">
             <div class="css-bh7d0o e18r2nwe2">
                 <div class="css-hhf500 e18r2nwe0">
-                    <button href="{/review/local_review_list}" class="mainBtn css-hhk5mj">로컬 크리에이터 후기</button>
+                    <button onclick="location.href = '/review/local_review_list' " class="mainBtn css-hhk5mj">로컬 크리에이터 후기</button>
                 </div>
                 <div class="css-hhf500 e18r2nwe0">
-                    <button href="{/review/user_review_list}" class="mainBtn css-hhk5mj orderActive">플로깅 참가자 후기
-                        목록</button>
+                    <button onclick="location.href = '/review/user_review_list' " class="mainBtn css-hhk5mj orderActive">플로깅 참가자 후기 목록</button>
                 </div>
             </div>
         </div>
@@ -54,16 +60,14 @@
                         <ul class="filter-bar__control-list__left">
                             <li class="filter-bar__control-list__item">
                                 <div class="drop-down panel-drop-down filter-bar-control">
-                                    <button id="recent"
-                                            class="button recent order orderActive button--color-gray-4 button--size-50 button--shape-4 filter-bar-control__button">
+                                    <button href="review/user_review_list?order=recent" class="button recent order orderActive button--color-gray-4 button--size-50 button--shape-4 filter-bar-control__button">
                                         &nbsp최신순&nbsp
                                     </button>
                                 </div>
                             </li>
                             <li class="filter-bar__control-list__item">
                                 <div class="drop-down panel-drop-down filter-bar-control">
-                                    <button id="popular"
-                                            class="button popular order button--color-gray-4 button--size-50 button--shape-4 filter-bar-control__button">
+                                    <button href="review/user_review_list?order=popular" class="button popular order button--color-gray-4 button--size-50 button--shape-4 filter-bar-control__button">
                                         &nbsp인기순&nbsp
                                     </button>
                                 </div>
@@ -73,14 +77,14 @@
                     <ul class="filter-bar__tag-list"></ul>
                 </div>
             </div>
-            <div class="css-1ljcge9 e1gt23lz0">게시글 목록 <th:block th:text="${pagination.total}+개"></th:block></div>
-            <div class="css-xy5hx5 erfbhrp0 item-list"
-                 style="padding-top: 0px; transform: translateY(0px);"></div>
+            <div class="css-1ljcge9 e1gt23lz0">게시글 목록
+                <th:block th:text="${pagination.total}+개"></th:block>
+            </div>
+            <div class="css-xy5hx5 erfbhrp0 item-list" style="padding-top: 0px; transform: translateY(0px);"></div>
         </div>
     </div>
 
 </div>
-<footer th:replace="/header-footer/footer::footer"></footer>
 </body>
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 <script>
@@ -98,7 +102,7 @@
 </script>
 <script src="/js/review/review-main.js"></script>
 <script th:inline="javascript">
-    let reviews =[[${reviews}]];
+    let reviews = [[${reviews}]];
     let nowPage = [[${pagination.page}]];
     let order = [[${search.order}]];
     let userId = [[${session.id}]];
