--- a/src/main/resources/templates/review/local_review_detail.html
+++ b/src/main/resources/templates/review/local_review_detail.html
@@ -46,10 +46,10 @@
                     <div class="e18r2nwe4 css-12un3nt">
                         <div class="css-bh7d0o e18r2nwe2">
                             <div class="css-hhf500 e18r2nwe0">
-                                <button class="mainBtn css-hhk5mj orderActive">로컬 크리에이터 후기</button>
+                                <button onclick="location.href = '/review/local_review_list' " class="mainBtn css-hhk5mj orderActive">로컬 크리에이터 후기</button>
                             </div>
                             <div class="css-hhf500 e18r2nwe0">
-                                <button class="mainBtn css-hhk5mj">플로깅 참가자 후기 목록</button>
+                                <button onclick="location.href = '/review/user_review_list' " class="mainBtn css-hhk5mj">플로깅 참가자 후기 목록</button>
                             </div>
                         </div>
                     </div>
