--- a/src/main/resources/templates/admin/product-form.html
+++ b/src/main/resources/templates/admin/product-form.html
@@ -130,7 +130,7 @@
                     <!-- 작성하기 btn -->
                     <div class="write-btn-wrap">
                         <button type="button" class="btn btn-list"><a th:href="@{product}">취소 하기</a></button>
-                        <button type="submit" class="btn btn-write">상품 등록</button>
+                        <button type="button" class="btn btn-write">상품 등록</button>
                     </div>
                 </form>
 
