--- a/src/main/resources/templates/review/local_review_list.html
+++ b/src/main/resources/templates/review/local_review_list.html
@@ -95,6 +95,7 @@
         $(this).addClass("orderActive");
     });
 </script>
+<script src="/js/review/header.js"></script>
 <script src="/js/review/review-main.js"></script>
 <script th:inline="javascript">
     let reviews = [[${reviews}]];
