--- a/src/main/resources/templates/main/main.html
+++ b/src/main/resources/templates/main/main.html
@@ -86,7 +86,7 @@
 </div>
 <!--    상품목록-->
 <div class="e4cq32f2 css-1obbfpy">
-    <button type="button" class="=css-av2k9l">My Coupon</button>
+    <button type="button" class="=css-av2k9l" onclick="location.href='/mypage/my-product'">My Coupon</button>
     <div class="css-14vj981">
         <div class="css-dlv2hg">
             <a href="/product/product-list">
