--- a/src/main/resources/templates/admin/notice-form.html
+++ b/src/main/resources/templates/admin/notice-form.html
@@ -75,7 +75,7 @@
                                 <label for="attach">
                                     <div class="search-notice-img">찾아보기</div>
                                 </label>
-                                <input type="file" class="file" id="attach" style="display: none;" name= "imageFile" >
+                                <input type="file" class="file" id="attach" style="display: none;" name= "uploadFile" >
 
                                 <input type="hidden" name="fileUuid" value="${uuid}">
                                 <input type="hidden" name="fileName" value="${imageName}">
