--- a/src/main/resources/templates/admin/product-form.html
+++ b/src/main/resources/templates/admin/product-form.html
@@ -79,8 +79,15 @@
                                 <select th:field="*{productCategory}">
                                     <option th:value="'전체'" th:text="전체"></option>
                                     <option th:value="'음료'" th:text="음료"></option>
-                                    <option th:value="'빵'" th:text="빵"></option>
-                                    <option th:value="'외식'" th:text="외식"></option>
+                                    <option th:value="'베이커리'" th:text="베이커리"></option>
+                                    <option th:value="'여가생활'" th:text="여가생활"></option>
+                                    <option th:value="'숙박시설'" th:text="숙박시설"></option>
+                                    <option th:value="'문화체험'" th:text="문화체험"></option>
+                                    <option th:value="'특산품'" th:text="특산품"></option>
+                                    <option th:value="'의류'" th:text="의류"></option>
+                                    <option th:value="'야외활동'" th:text="야외활동"></option>
+                                    <option th:value="'기타'" th:text="기타"></option>
+
                                 </select>
                             </div>
                         </div>
