--- a/src/main/resources/templates/plogging/plogging-detail.html
+++ b/src/main/resources/templates/plogging/plogging-detail.html
@@ -27,8 +27,7 @@
                                              style="width: 100%;"><img
                                                 class="production-selling-cover-image__entry__image" tabindex="0"
                                                 alt="플러깅 모집 이미지"
-                                                src="https://image.ohou.se/i/bucketplace-v2-development/uploads/productions/167168822852557476.jpg?gif=1&amp;w=640&amp;h=640&amp;c=c"
-                                                srcset="https://image.ohou.se/i/bucketplace-v2-development/uploads/productions/167168822852557476.jpg?gif=1&amp;w=960&amp;h=960&amp;c=c 1.5x,https://image.ohou.se/i/bucketplace-v2-development/uploads/productions/167168822852557476.jpg?gif=1&amp;w=1280&amp;h=1280&amp;c=c 2x,https://image.ohou.se/i/bucketplace-v2-development/uploads/productions/167168822852557476.jpg?gif=1&amp;w=1920&amp;h=1920&amp;c=c 3x">
+                                                src="https://liftlearning.com/wp-content/uploads/2020/09/default-image.png">
                                         </div>
                                     </div>
                                 </div>
@@ -113,7 +112,7 @@
                                               d="M17.51 5.5H6.492a1 1 0 00-.93.632l-.99 2.5A1 1 0 005.498 10h13.004a1 1 0 00.927-1.368l-.99-2.5a1 1 0 00-.93-.632zM3.642 8.263a2.002 2.002 0 001.397 2.684V17.5a2.5 2.5 0 002.5 2.5H16.474a2.5 2.5 0 002.487-2.5v-6.553a2.002 2.002 0 001.398-2.684l-.99-2.5a2 2 0 00-1.86-1.263H6.493a2 2 0 00-1.86 1.263l-.99 2.5zM6.04 17.5V11h11.921v6.5a1.5 1.5 0 01-1.487 1.5v-4a2 2 0 00-2-2h-.97a2 2 0 00-2 2v4H7.54a1.5 1.5 0 01-1.5-1.5zm6.464 1.5h2.97v-4a1 1 0 00-1-1h-.97a1 1 0 00-1 1v1h.847a.5.5 0 110 1h-.847v2zM8 13h1.5v1.5H8V13zm-1 0a1 1 0 011-1h1.5a1 1 0 011 1v1.5a1 1 0 01-1 1H8a1 1 0 01-1-1V13z"
                                               fill="#3F474D"></path>
                                     </svg>
-                                    <div class="css-158icaa e3xbt9p5"><span class="css-16kia55 e3xbt9p4">유저명</span>
+                                    <div class="css-158icaa e3xbt9p5"><span class="css-16kia55 e3xbt9p4" th:text="*{userNickname}"></span>
                                     </div>
                                 </div>
                             </a></div>
