--- a/src/main/resources/templates/plogging/plogging-detail.html
+++ b/src/main/resources/templates/plogging/plogging-detail.html
@@ -36,10 +36,7 @@
                     <div class="production-selling-overview__content col-12 col-md-6 col-lg-5">
                         <div class="production-selling-header" th:object="${plogging}">
                             <h1 class="production-selling-header__title">
-                                <p class="production-selling-header__title__brand-wrap"><a
-                                        class="production-selling-header__title__brand"
-                                        href="/brands/home?query=%ED%97%AC%EB%A1%9C%EC%9A%B0%EC%8A%AC%EB%A6%BD&amp;affect_type=ProductSaleDetail&amp;affect_id=767440">
-                                    자치도</a>
+                                <p class="production-selling-header__title__brand-wrap">
                                     <button class="production-selling-header__action__button production-selling-header__action__button-scrap"
                                             style="border: none; background-color: transparent; color: #6e6e6e; position: absolute; right: 4px;"
                                             type="button">
@@ -103,7 +100,7 @@
 
                             <a class="css-1jw8uh0 e3xbt9p7"
                                href="/brands/home?query=%ED%97%AC%EB%A1%9C%EC%9A%B0%EC%8A%AC%EB%A6%BD&amp;affect_type=ProductSaleDetail&amp;affect_id=767440">
-                                <div class="css-gshsra e3xbt9p6">
+                                <div class="css-gshsra e3xbt9p6" style="display: flex; margin-top: 10px">
                                     <svg width="24" height="24" fill="none" preserveAspectRatio="xMidYMid meet">
                                         <path d="M3.972 8.694c0-.26.212-.472.472-.472h12.278a.472.472 0 010 .945H4.444a.472.472 0 01-.472-.473z"
                                               fill="#35C5F0"></path>
@@ -117,7 +114,7 @@
                             </a></div>
                         <div class="production-selling-option-form production-selling-overview__option-form"><p
                                 class="css-49v6aj ejhg2ki2"><span class="css-7c0zb9 ejhg2ki1">모집인원</span><span
-                                class="css-q02jxk ejhg2ki0"><span>0</span>명</span></p>
+                                class="css-q02jxk ejhg2ki0" style="margin-left: 10px"><span>0</span>명</span></p>
                             <div class="production-selling-option-form__footer">
                                 <button class="button button--color-blue button--size-55 button--shape-4" type="button">
                                     신청서 작성
