--- a/src/main/resources/templates/coupon/use-coupon.html
+++ b/src/main/resources/templates/coupon/use-coupon.html
@@ -73,6 +73,8 @@
 <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
     <script th:inline="javascript">
         let coupon = [[${coupon}]];
+        let product = [[${product}]];
+        $(".img").attr("src","/admin/display?fileName="+product.productImagePath+"/t_"+product.productImageUuid+"_"+product.productImageName);
         $(".commit").on("click",e=>{
             $.ajax({
                 url :"/coupon/check-coupon",
